syntax = "proto3";

package proto;
option go_package = "./;proto";


message UnionCmd {
  uint32 message_id = 9;
  bytes body = 13;
}
