syntax = "proto3";

package proto;
option go_package = "./;proto";

import "UnionCmd.proto";

message UnionCmdNotify {
  enum CmdId {
    option allow_alias = true;
    ENET_CHANNEL_ID = 0;
    NONE = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 19;
  }

  repeated UnionCmd cmd_list = 1;
}
